--- a/dashboard.html
+++ b/dashboard.html
@@ -94,6 +94,26 @@
 
         <!-- METRICS -->
         <section class="metrics">
+          <div class="metric-card purple">
+            <div class="metric-icon">
+              <i class="fa-solid fa-computer"></i>
+            </div>
+            <h4>أموال اليوم</h4>
+            <div class="metric-value" id="revenue">$0</div>
+            <div class="metric-change positive">
+              <i class="fa-solid fa-arrow-up"></i> 55%+
+            </div>
+          </div>
+          <div class="metric-card blue">
+            <div class="metric-icon">
+              <i class="fa-solid fa-globe"></i>
+            </div>
+            <h4>مستخدمو اليوم</h4>
+            <div class="metric-value" id="today">0</div>
+            <div class="metric-change positive">
+              <i class="fa-solid fa-arrow-up"></i> 33%+
+            </div>
+          </div>
           <div class="metric-card pink">
             <div class="metric-icon">
               <i class="fa-solid fa-file-invoice"></i>
