--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,9 @@
     <title>Clinic Dashboard</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./img/dummy-conan.jpeg" />
+
+    <link rel="icon" type="image/png" href="/dummy-conan.jpeg" />
+
     <!-- Or for .ico file -->
     <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico" /> -->
 
