--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 
     <!-- Favicon -->
 
-    <link rel="icon" type="image/png" href="/dummy-conan.jpeg" />
+    <link rel="icon" href="/img/dummy-conan.jpeg" type="image/jpeg" />
 
     <!-- Or for .ico file -->
     <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico" /> -->
