--- a/booking.html
+++ b/booking.html
@@ -35,11 +35,7 @@
 
           <a href="#">
             <i class="fa-solid fa-bell"></i>
-            الحجوزات
-          </a>
-          <a href="#">
-            <i class="fa-solid fa-user"></i>
-            ارسال رسالة جماعية
+            التنبيهات
           </a>
 
           <a href="analytics.html">
@@ -47,8 +43,13 @@
             تحليلات
           </a>
           <a href="booking.html" class="active">
-            <i class="fa-solid fa-rocket"></i>
+            <i class="fa-solid fa-table"></i>
             جدول الحجوزات
+          </a>
+
+          <a href="#">
+            <i class="fa-solid fa-user"></i>
+            ارسال رسالة جماعية
           </a>
         </nav>
       </aside>
