--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,6 @@
     <!-- Favicon -->
 
     <link rel="icon" href="/img/dummy-conan.jpeg" type="image/jpeg" />
-
     <!-- Or for .ico file -->
     <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico" /> -->
 
@@ -41,7 +40,7 @@
           <span>CONAN DASHBOARD</span>
         </div>
         <nav class="menu">
-          <a href="#" class="active">
+          <a href="dashboard.html" class="active">
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
@@ -56,7 +55,7 @@
             تحليلات
           </a>
           <a href="booking.html">
-            <i class="fa-solid fa-rocket"></i>
+            <i class="fa-solid fa-table"></i>
             جدول الحجوزات
           </a>
 
