--- a/dashboard.html
+++ b/dashboard.html
@@ -126,16 +126,19 @@
         </section>
 
         <!-- HERO CARDS -->
+
         <section class="hero-cards">
           <div class="hero-card dark">
             <div>
-              <h3>بناها المطورون</h3>
+              <h3>لوحة تحكم عيادة سمايلز</h3>
               <p>
-                من الألوان والبطاقات والطباعة إلى العناصر المعقدة ، ستجد الوثائق
-                الكاملة.
+                مرحبًا بكم في النظام الذكي لإدارة العيادة. من هنا يمكنكم متابعة
+                المواعيد، عرض أسماء الحجوزات، وإدارة سير العمل بسهولة ودقة.
               </p>
             </div>
-            <button>اقرأ المستندات</button>
+            <a href="booking.html">
+              <button>عرض الحجوزات</button>
+            </a>
           </div>
           <div class="hero-card gradient">
             <div class="rocket-icon">🚀</div>
