--- a/dashboard.html
+++ b/dashboard.html
@@ -126,22 +126,75 @@
         </section>
 
         <!-- HERO CARDS -->
-
-        <section class="hero-cards">
-          <div class="hero-card dark">
+        <section
+          class="hero-cards"
+          style="
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            align-items: stretch;
+            padding: 20px;
+          "
+        >
+          <div
+            class="hero-card dark"
+            style="
+              flex: 1 1 400px;
+              background-color: #1e1e1e;
+              color: #fff;
+              padding: 40px;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+            "
+          >
             <div>
-              <h3>لوحة تحكم عيادة سمايلز</h3>
-              <p>
+              <h3 style="margin-top: 0; font-size: 24px">
+                لوحة تحكم عيادة سمايلز
+              </h3>
+              <p style="line-height: 1.6; margin-bottom: 24px; font-size: 16px">
                 مرحبًا بكم في النظام الذكي لإدارة العيادة. من هنا يمكنكم متابعة
                 المواعيد، عرض أسماء الحجوزات، وإدارة سير العمل بسهولة ودقة.
               </p>
             </div>
-            <a href="booking.html">
-              <button>عرض الحجوزات</button>
+            <a
+              href="booking.html"
+              style="text-align: center; text-decoration: none"
+            >
+              <button
+                style="
+                  background: linear-gradient(180deg, #7c3aed, #a855f7);
+                  color: #fff;
+                  border: none;
+                  padding: 12px 24px;
+                  cursor: pointer;
+                  font-size: 16px;
+                "
+              >
+                عرض الحجوزات
+              </button>
             </a>
           </div>
-          <div class="hero-card gradient">
-            <div class="rocket-icon">🚀</div>
+
+          <div
+            class="hero-card gradient"
+            style="
+              flex: 1 1 400px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              overflow: hidden;
+              padding: 0;
+              margin: 0;
+              background-color: #f5f5f5;
+            "
+          >
+            <img
+              src="img/rocket.jpg"
+              alt="Rocket Image"
+              style="width: 100%; height: 100%; object-fit: cover"
+            />
           </div>
         </section>
 
