--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,7 @@
     <!-- Favicon -->
 
     <link rel="icon" href="/img/dummy-conan.jpeg" type="image/jpeg" />
+
     <!-- Or for .ico file -->
     <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico" /> -->
 
@@ -17,6 +18,7 @@
     />
     <link rel="stylesheet" href="./dashboard.css" />
 
+    <script src="dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -257,7 +259,5 @@
         <footer>© 2025 Smile Clinic</footer>
       </main>
     </div>
-
-    <script src="./dashboard.js"></script>
   </body>
 </html>
